Useless files deleted

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="table-list">
         </div>
         <div class = "filter-option">
-            Filter By:
+            Show by:
             <br/>
             <input type="radio" name="Box" value="seats" class="seats" />
             <label>
